Краткое описание того, что поменяла

--- a/html/neco_landing_desktop_day.html
+++ b/html/neco_landing_desktop_day.html
@@ -205,6 +205,9 @@
                     grooming to playtime, we provide personalized attention to ensure 
                     your cat's happiness and well-being at NekoInn.
                 </p>
+                <button type="button" class="btn service_btn">
+                    BOOK NOW
+                </button>
             </div>
             <div class="serv_list">
                 <img src="../pictures/pictures/serv_cat1.png" alt="" id="serv_pic">
@@ -244,6 +247,290 @@
                     nutritious.
                 </p>
             </div>
+        </section>
+        <section id="gallery">
+            <div class="gal_pic_1">
+                <img src="../pictures/pictures/gallery_cat1.png" alt="" id="gallery_cat">
+                <div  class="btn_house b_1"><img src="../pictures/vectors/PetHouse-Icon.png" alt=""></div>
+            </div>
+            <div class="gal_pic_2">
+                <img src="../pictures/pictures/gallery_cat2.png" alt="" id="gallery_cat">
+                <div  class="btn_house b_2"><img src="../pictures/vectors/PetHouse-Icon.png" alt=""></div>
+            </div>
+            <div class="gal_pic_3">
+                <img src="../pictures/pictures/gallery_cat3.png" alt="" id="gallery_cat">
+                <div  class="btn_house b_3"><img src="../pictures/vectors/PetHouse-Icon.png" alt=""></div>
+            </div>
+            <div class="gal_pic_4">
+                <img src="../pictures/pictures/gallery_cat4.png" alt="" id="gallery_cat">
+                <div  class="btn_house b_4"><img src="../pictures/vectors/PetHouse-Icon.png" alt=""></div>
+            </div>
+            <div class="gal_pic_5">
+                <img src="../pictures/pictures/gallery_cat5.png" alt="" id="gallery_cat">
+                <div  class="btn_house b_5"><img src="../pictures/vectors/PetHouse-Icon.png" alt="" ></div>
+            </div>
+            <div class="gal_pic_6">
+                <img src="../pictures/pictures/gallery_cat6.png" alt="" id="gallery_cat">
+                <div  class="btn_house b_6"><img src="../pictures/vectors/PetHouse-Icon.png" alt=""></div>
+            </div>
+
+        </section>
+        <section id="pricing">
+            <blockquote>
+                TRANSPARENT RATES FOR YOUR PURRY COMPANION
+            </blockquote>
+            <h1>Pricing</h1>
+            <p id="pricing_text">
+                In our Pricing Section, transparency meets affordability. 
+                At NekoInn, we believe in straightforward pricing, 
+                ensuring you have peace of mind knowing exactly what to expect.
+            </p>
+            <section id="price_tab">
+                <div id="price_usual">
+                    <h4 id="pr_us_h">
+                        PURR DUCAL
+                        <img src="../pictures/vectors/royal-crown-variant-made-of-lines-and-circles-svgrepo-com 1.png" alt="">
+                    </h4>
+                    <div id="price_usual_block">
+                        <h1>
+                            $160.99
+                        </h1>
+                        <h5>
+                            PER DAY
+                        </h5>
+                    </div>
+                    <ul id="pr_us_list">
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Standard Room Accommodation</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Basic Grooming</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Group Playtime</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Standard Meal Plan</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Daily Wellness Check</p>
+                        </li> 
+                    </ul>
+
+                    <button type="button" class="btn price_btn">BOOK NOW</button>
+                </div>
+                <div id="price_special">
+                    <h4 id="pr_sp_h">
+                        PURR IMPERIAL
+                        <img src="../pictures/vectors/royal-crown-of-elegant-vintage-design-svgrepo-com 1.png" alt="">
+                    </h4>
+                    <div id="price_special_block">
+                        <h1 id="price_special_h">
+                            $600.99
+                        </h1>
+                        <h5>
+                            PER DAY
+                        </h5>
+                    </div>
+                    <ul id="pr_special_list">
+                        <li>
+                            <img src="../pictures/vectors/check-circle2.png" alt="">
+                            <p>Presidential Suite Accommodation</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle2.png" alt="">
+                            <p>Deluxe Spa Grooming Package</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle2.png" alt="">
+                            <p>Exclusive One-on-One Playtime</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle2.png" alt="">
+                            <p>Gourmet Meal Plan</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle2.png" alt="">
+                            <p>24/7 Concierge Service   </p>
+                        </li> 
+                    </ul>
+
+                    <button type="button" class="btn price_spec_btn">BOOK NOW</button>
+                </div>
+                <div id="price_usual">
+                    <h4 id="pr_us_h">
+                        PURR ROYAL
+                        <img src="../pictures/vectors/crown-made-of-triangles-and-circles-outline-svgrepo-com 1.png" alt="">
+                    </h4>
+                    <div id="price_usual_block">
+                        <h1>
+                            $299.99
+                        </h1>
+                        <h5>
+                            PER DAY
+                        </h5>
+                    </div>
+                    <ul id="pr_us_list">
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Luxury Suite Accommodation</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Deluxe Grooming Package</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Private Playtime</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>Premium Meal Plan</p>
+                        </li>
+                        <li>
+                            <img src="../pictures/vectors/check-circle.png" alt="">
+                            <p>VIP Wellness Check</p>
+                        </li> 
+                    </ul>
+
+                    <button type="button" class="btn price_btn">BOOK NOW</button>
+                </div>
+            </section>
+        </section>
+        <section id="feedback">
+            <blockquote>
+                PAWSITIVE REVIEWS FROM HAPPY CUSTOMERS
+            </blockquote>
+            <h1>
+                They Celebrate NekoInn
+            </h1>
+            <p id="fb_text">
+                Discover what our clients have to say about their 
+                experiences at NekoInn. Their testimonials speak 
+                volumes about the exceptional care and service we 
+                provide for their beloved feline companions.
+            </p>
+            <section id="feedback_comments">
+                <div id="com_block">
+                    <img src="../pictures/vectors/quote-svgrepo-com 1.png" alt="">
+                    <p>
+                        Leaving my cat at NekoInn was the best decision I ever made. The staff 
+                        went above and beyond to ensure that my furry friend felt loved and cared for. 
+                        I received regular updates and photos, which put my mind at ease during my 
+                        time away. Thank you, NekoInn, for providing such a wonderful home away from 
+                        home for my cat!
+                    </p>
+                    <div id="client_block">
+                        <img src="../pictures/pictures/feedback_pic1.png" alt="" id="com_pic">
+                    <h4>
+                        Emily S
+                    </h4>
+                    </div>
+                </div>
+
+                <div id="com_block">
+                    <img src="../pictures/vectors/quote-svgrepo-com 1.png" alt="">
+                    <p>
+                        Leaving my cat at NekoInn was the best decision I ever made. The staff 
+                        went above and beyond to ensure that my furry friend felt loved and cared for. 
+                        I received regular updates and photos, which put my mind at ease during my 
+                        time away. Thank you, NekoInn, for providing such a wonderful home away from 
+                        home for my cat!
+                    </p>
+                    <div id="client_block">
+                        <img src="../pictures/pictures/feedback_pic2.png" alt="" id="com_pic">
+                    <h4>
+                        Emily S
+                    </h4>
+                    </div>
+                </div>
+
+                <div id="com_block">
+                    <img src="../pictures/vectors/quote-svgrepo-com 1.png" alt="">
+                    <p>
+                        Leaving my cat at NekoInn was the best decision I ever made. The staff 
+                        went above and beyond to ensure that my furry friend felt loved and cared for. 
+                        I received regular updates and photos, which put my mind at ease during my 
+                        time away. Thank you, NekoInn, for providing such a wonderful home away from 
+                        home for my cat!
+                    </p>
+                    <div id="client_block">
+                        <img src="../pictures/pictures/feedback_pic3.png" alt="" id="com_pic">
+                    <h4>
+                        Emily S
+                    </h4>
+                    </div>
+                </div>
+            </section>
+        </section>
+        <section id="forms">
+            <form action="">
+                <div id="form_text">
+                    <blockquote>
+                        SECURE YOUR CAT'S STAY TODAY
+                    </blockquote>
+                    <h1>
+                        Book Now
+                    </h1>
+                    <p>
+                        Ready to reserve your cat's spot at NekoInn? Our easy-to-use booking system 
+                        makes it simple to schedule your cat's stay with us. Just select your desired 
+                        dates, choose from our range of accommodations and services, and complete 
+                        your reservation in a few easy steps.
+                    </p>
+                </div>
+                <div id="information">
+                    <div id="npep">
+                        <div id="np">
+
+                                <div class="form_block full_name">
+                                    <label for="" class="label_form">NAME</label>
+                                    <input type="text" class="input">
+                                </div>
+                                <div class="form_block full_name">
+                                    <label for="" class="label_form">PHONE NUMBER</label>
+                                    <input type="tel" class="input">
+                                </div>
+
+                        </div>
+                        <div id="ep">
+                            <div>
+                                <div class="form_block full_name">
+                                    <label for="" class="label_form">EMAIL</label>
+                                    <input type="text" class="input">
+                                </div>
+                                <div class="form_block full_name">
+                                    <label for="" class="label_form">CAT NAME</label>
+                                    <input type="text" class="input">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="php">
+                        <div class="form_block full_name">
+                            <label for="" class="label_form">PICK A DATE</label>
+                            <input type="datetime-local" class="input dt">
+                        </div>
+                        <div class="form_block full_name">
+                            <label for="" class="label_form">HOW MANY PETS?</label>
+                            <input type="number" class="input">
+                        </div>
+                        <div class="form_block full_name">
+                            <label for="" class="label_form">PURR PLAN</label>
+                            <input type="text" class="input">
+                        </div>
+                    </div>
+                </div>
+                <button class="btn form_btn">
+                    BOOK NOW
+                </button>
+                
+            </form>
         </section>
     </main>
     <footer>
